@startuml MENTIX_Hub_Class_Diagram
!theme plain
skinparam classAttributeIconSize 0

class User {
  - id: INT PK
  - email: VARCHAR(255)
  - password_hash: VARCHAR(255)
  - username: VARCHAR(100)
  - role: ENUM('student','mentor','moderator','dev_admin','super_admin')
  - avatar_url: VARCHAR(500)
  - bio: TEXT
  - is_verified: BOOLEAN
  - is_banned: BOOLEAN
  - created_at: TIMESTAMP
  + register()
  + login()
  + updateProfile()
  + requestPromotion()
}

class Project {
  - id: INT PK
  - user_id: INT FK
  - title: VARCHAR(200)
  - description: TEXT
  - tags: JSON
  - external_links: JSON
  - file_url: VARCHAR(500)
  - thumbnail_url: VARCHAR(500)
  - heart_count: INT
  - comment_count: INT
  - created_at: TIMESTAMP
  - updated_at: TIMESTAMP
  + create()
  + update()
  + delete()
  + search()
}

class Heart {
  - id: INT PK
  - user_id: INT FK
  - project_id: INT FK
  - created_at: TIMESTAMP
  + toggle()
}

class Comment {
  - id: INT PK
  - user_id: INT FK
  - project_id: INT FK
  - content: TEXT
  - created_at: TIMESTAMP
  + create()
  + delete()
}

class Favorite {
  - id: INT PK
  - user_id: INT FK
  - project_id: INT FK
  - created_at: TIMESTAMP
  + add()
  + remove()
}

class Mentorship {
  - id: INT PK
  - mentor_id: INT FK
  - student_id: INT FK
  - project_id: INT FK
  - message: TEXT
  - feedback: TEXT
  - status: ENUM('pending','accepted','rejected')
  - created_at: TIMESTAMP
  - responded_at: TIMESTAMP
  + request()
  + respond()
}

class Collaboration {
  - id: INT PK
  - requester_id: INT FK
  - recipient_id: INT FK
  - project_id: INT FK
  - message: TEXT
  - response_message: TEXT
  - status: ENUM('pending','accepted','rejected','cancelled')
  - created_at: TIMESTAMP
  - responded_at: TIMESTAMP
  + request()
  + respond()
  + cancel()
}

class Report {
  - id: INT PK
  - reporter_id: INT FK
  - project_id: INT FK
  - reason: TEXT
  - status: ENUM('pending','resolved','dismissed')
  - moderator_id: INT FK
  - resolution: TEXT
  - created_at: TIMESTAMP
  + submit()
  + resolve()
}

class AuditLog {
  - id: INT PK
  - actor_id: INT FK
  - action_type: VARCHAR(100)
  - target_type: VARCHAR(100)
  - target_id: INT
  - details: JSON
  - ip_address: VARCHAR(45)
  - created_at: TIMESTAMP
  + log()
}

class Backup {
  - id: INT PK
  - filename: VARCHAR(500)
  - file_size: BIGINT
  - tables_included: JSON
  - row_limit: INT
  - status: ENUM('running','completed','failed')
  - type: ENUM('manual','scheduled')
  - created_at: TIMESTAMP
  + run()
  + restore()
}

class SystemSetting {
  - id: INT PK
  - key: VARCHAR(100)
  - value: JSON
  - updated_by: INT FK
  - updated_at: TIMESTAMP
  + get()
  + set()
}

class Notification {
  - id: INT PK
  - user_id: INT FK
  - type: ENUM('mentorship','collaboration','report','promotion','system')
  - title: VARCHAR(200)
  - message: TEXT
  - is_read: BOOLEAN
  - reference_type: VARCHAR(50)
  - reference_id: INT
  - created_at: TIMESTAMP
  + send()
  + markAsRead()
}

' --- Relationships ---

User "1" -- "0..*" Project : owns
User "1" -- "0..*" Heart : gives
User "1" -- "0..*" Comment : writes
User "1" -- "0..*" Favorite : saves
User "1" -- "0..*" Notification : receives

User "1" -- "0..*" Mentorship : as mentor
User "1" -- "0..*" Mentorship : as student
User "1" -- "0..*" Collaboration : as requester
User "1" -- "0..*" Collaboration : as recipient
User "1" -- "0..*" Report : as reporter
User "1" -- "0..*" AuditLog : as actor

Project "1" -- "0..*" Heart : has
Project "1" -- "0..*" Comment : has
Project "1" -- "0..*" Favorite : has
Project "1" -- "0..*" Mentorship : references
Project "1" -- "0..*" Collaboration : references
Project "1" -- "0..*" Report : targets

@enduml
